hphp/test/zend/good/ext/intl/tests/timezone_getDisplayName_variant3-49+.php.skipif
<?php
if (!defined('INTL_ICU_VERSION') ||
    version_compare(INTL_ICU_VERSION, '49') < 0) {
  die('skip for ICU 49+');
}
